--- a/12_Structs/index.html
+++ b/12_Structs/index.html
@@ -174,23 +174,25 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="understanding-and-implementing-structs-in-rust"><a class="header" href="#understanding-and-implementing-structs-in-rust">Understanding and Implementing Structs in Rust</a></h1>
-<p>In this tutorial, we'll delve into the concept of structs in Rust programming language. Structs are fundamental data structures used to encapsulate related data fields. They resemble tuples but with named fields, providing clarity and expressiveness to your code. Let's explore how to define, instantiate, and manipulate structs in Rust.</p>
+<p>Structs in Rust are one of the most fundamental data structures, used to encapsulate related data fields under a single name. Structs allow you to group and name multiple related values, making your code more readable and maintainable. This tutorial will guide you through the concept of structs in Rust, covering their definition, instantiation, field access, and advanced usage scenarios.</p>
 <h2 id="1-introduction-to-structs"><a class="header" href="#1-introduction-to-structs">1. Introduction to Structs</a></h2>
-<p>Structs in Rust are analogous to tuples but offer named fields for better readability and organization. Each field can have a different data type, making structs versatile and powerful.</p>
-<h2 id="syntax"><a class="header" href="#syntax">Syntax:</a></h2>
+<p>In Rust, structs are similar to tuples but with named fields, providing clearer and more expressive ways to structure your data. Each field in a struct has a name and a type, and the fields can have different types, making structs highly versatile.</p>
+<h3 id="syntax"><a class="header" href="#syntax">Syntax:</a></h3>
+<p>To define a struct, use the following syntax:</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
 </span>struct StructName {
     field1: Type1,
     field2: Type2,
-    // Add more fields as needed
+    // Additional fields
 }
 <span class="boring">}</span></code></pre></pre>
+<p>This defines a struct named <code>StructName</code> with fields <code>field1</code> and <code>field2</code>, each having a specific type.</p>
 <h2 id="2-creating-structs"><a class="header" href="#2-creating-structs">2. Creating Structs</a></h2>
-<p>Let's create two structs: <code>Book</code> and <code>User</code>, to demonstrate the concept.</p>
+<p>Let's define two structs: <code>Book</code> and <code>User</code>, which will serve as examples for understanding how to use structs.</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
-</span>// Define Book struct
+</span>// Define the Book struct
 struct Book {
     title: String,
     author: String,
@@ -198,7 +200,7 @@ struct Book {
     available: bool,
 }
 
-// Define User struct
+// Define the User struct
 struct User {
     active: bool,
     username: String,
@@ -206,8 +208,13 @@ struct User {
     sign_in_count: u64,
 }
 <span class="boring">}</span></code></pre></pre>
+<h3 id="explanation"><a class="header" href="#explanation">Explanation:</a></h3>
+<ul>
+<li><code>Book</code>: Represents a book with a title, author, number of pages, and availability status.</li>
+<li><code>User</code>: Represents a user with an active status, username, email, and sign-in count.</li>
+</ul>
 <h2 id="3-instantiating-structs"><a class="header" href="#3-instantiating-structs">3. Instantiating Structs</a></h2>
-<p>You can create instances of structs by providing values for each field.</p>
+<p>To create an instance of a struct, you provide values for each field. This is similar to initializing an object in other programming languages.</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
 </span>// Instantiate a Book struct
@@ -226,11 +233,16 @@ let user1 = User {
     sign_in_count: 1,
 };
 <span class="boring">}</span></code></pre></pre>
+<h3 id="explanation-1"><a class="header" href="#explanation-1">Explanation:</a></h3>
+<ul>
+<li><code>my_book</code>: An instance of the <code>Book</code> struct representing a book titled "Rust Programming" by "John Doe".</li>
+<li><code>user1</code>: An instance of the <code>User</code> struct representing a user with the username "example_user".</li>
+</ul>
 <h2 id="4-accessing-and-modifying-struct-fields"><a class="header" href="#4-accessing-and-modifying-struct-fields">4. Accessing and Modifying Struct Fields</a></h2>
-<p>You can access and modify struct fields using dot notation. Remember, the entire struct instance must be mutable to modify any of its fields.</p>
+<p>You can access and modify the fields of a struct using dot notation. If you need to modify a field, the entire struct instance must be mutable.</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
-</span>// Accessing and modifying struct fields
+</span>// Access and modify struct fields
 let mut user2 = User {
     active: false,
     username: String::from("another_user"),
@@ -238,39 +250,55 @@ let mut user2 = User {
     sign_in_count: 0,
 };
 
-// Modify email field
+// Modify the email field
 user2.email = String::from("new_email@example.com");
 <span class="boring">}</span></code></pre></pre>
+<h3 id="explanation-2"><a class="header" href="#explanation-2">Explanation:</a></h3>
+<ul>
+<li><code>user2</code>: A mutable instance of the <code>User</code> struct.</li>
+<li>The <code>email</code> field of <code>user2</code> is updated using dot notation.</li>
+</ul>
 <h2 id="5-returning-structs-from-functions"><a class="header" href="#5-returning-structs-from-functions">5. Returning Structs from Functions</a></h2>
-<p>Functions can return structs, providing a convenient way to create and initialize structs.</p>
+<p>Functions in Rust can return instances of structs, allowing for encapsulated logic to build and return data structures.</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
-</span>// Define a function to build a User struct
+</span>// Define a function that returns a User struct
 fn build_user(email: String, username: String) -&gt; User {
     User {
         active: true,
-        email, // field init shorthand
-        username,
+        email, // Field shorthand for email: email
+        username, // Field shorthand for username: username
         sign_in_count: 1,
     }
 }
 
-// Call the function to create a User struct
+// Use the function to create a User struct
 let user3 = build_user(String::from("user3@example.com"), String::from("user3"));
 <span class="boring">}</span></code></pre></pre>
+<h3 id="explanation-3"><a class="header" href="#explanation-3">Explanation:</a></h3>
+<ul>
+<li><code>build_user</code>: A function that creates and returns a <code>User</code> struct. The function takes an email and username as input and initializes the other fields with default values.</li>
+<li>The shorthand syntax (<code>email, username</code>) is used to simplify initialization when the field name and variable name are the same.</li>
+</ul>
 <h2 id="6-creating-instances-from-other-instances"><a class="header" href="#6-creating-instances-from-other-instances">6. Creating Instances from Other Instances</a></h2>
-<p>You can create new instances of a struct by using values from existing instances.</p>
+<p>Rust allows you to create a new struct instance by copying some fields from another instance. This is done using the struct update syntax.</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
 </span>// Create a new User instance based on user1 but with a different email
 let user4 = User {
-    email: user1.email, // Reuse email from user1
+    email: String::from("user4@example.com"), // New email
     ..user1 // Reuse other fields from user1
 };
 <span class="boring">}</span></code></pre></pre>
+<h3 id="explanation-4"><a class="header" href="#explanation-4">Explanation:</a></h3>
+<ul>
+<li><code>user4</code>: A new instance of <code>User</code> that reuses most of the fields from <code>user1</code> but changes the <code>email</code> field.</li>
+<li>The <code>..user1</code> syntax copies the remaining fields from <code>user1</code> to <code>user4</code>.</li>
+</ul>
 <h2 id="7-tuple-structs-and-unit-like-structs"><a class="header" href="#7-tuple-structs-and-unit-like-structs">7. Tuple Structs and Unit-Like Structs</a></h2>
-<p>Tuple structs are similar to normal structs but without named fields. Unit-like structs have no fields and are used for implementing traits without storing data.</p>
-<h2 id="tuple-struct"><a class="header" href="#tuple-struct">Tuple Struct:</a></h2>
+<p>Rust also supports tuple structs and unit-like structs, which offer different ways to define and use data structures.</p>
+<h3 id="71-tuple-structs"><a class="header" href="#71-tuple-structs">7.1 Tuple Structs</a></h3>
+<p>Tuple structs are similar to regular structs but without named fields. They are useful when you need a named tuple with specific types.</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
 </span>// Define a tuple struct
@@ -280,15 +308,26 @@ struct Color(i32, i32, i32);
 let black = Color(0, 0, 0);
 let white = Color(255, 255, 255);
 <span class="boring">}</span></code></pre></pre>
-<h2 id="unit-like-struct"><a class="header" href="#unit-like-struct">Unit-Like Struct:</a></h2>
+<h3 id="explanation-5"><a class="header" href="#explanation-5">Explanation:</a></h3>
+<ul>
+<li><code>Color</code>: A tuple struct representing an RGB color with three <code>i32</code> values.</li>
+</ul>
+<h3 id="72-unit-like-structs"><a class="header" href="#72-unit-like-structs">7.2 Unit-Like Structs</a></h3>
+<p>Unit-like structs have no fields and are typically used when implementing traits without needing to store data.</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
 </span>// Define a unit-like struct
 struct AlwaysEqual;
 
-// Instantiate unit-like struct
+// Instantiate a unit-like struct
 let always = AlwaysEqual;
 <span class="boring">}</span></code></pre></pre>
+<h3 id="explanation-6"><a class="header" href="#explanation-6">Explanation:</a></h3>
+<ul>
+<li><code>AlwaysEqual</code>: A unit-like struct that can be used when you need a type but don’t need to store any data.</li>
+</ul>
+<h2 id="conclusion"><a class="header" href="#conclusion">Conclusion</a></h2>
+<p>Structs in Rust are versatile tools for organizing and managing data. They allow you to encapsulate related fields into a single, named entity, providing both clarity and structure to your programs. By understanding how to define, instantiate, and manipulate structs, as well as how to use advanced features like tuple structs and unit-like structs, you can write more expressive and maintainable Rust code.</p>
 
                     </main>
 
