--- a/14_Error-Handling/index.html
+++ b/14_Error-Handling/index.html
@@ -173,7 +173,171 @@
 
                 <div id="content" class="content">
                     <main>
-                        
+                        <h1 id="understanding-and-implementing-error-handling-in-rust"><a class="header" href="#understanding-and-implementing-error-handling-in-rust">Understanding and Implementing Error Handling in Rust</a></h1>
+<p>Error handling is a critical aspect of software development, ensuring that your program can gracefully handle unexpected situations and continue operating or fail safely. Rust provides a robust error handling system that balances safety and control, allowing you to manage errors effectively without compromising performance or reliability. This tutorial will guide you through the various error handling techniques in Rust, including the <code>Result</code> and <code>Option</code> enums, panic handling, and best practices.</p>
+<h2 id="1-introduction-to-error-handling"><a class="header" href="#1-introduction-to-error-handling">1. Introduction to Error Handling</a></h2>
+<p>Rust’s approach to error handling revolves around two core concepts:</p>
+<ul>
+<li><strong>Recoverable Errors</strong>: These errors are expected and can be handled, allowing the program to recover or proceed with alternative logic. Rust uses the <code>Result</code> enum for recoverable errors.</li>
+<li><strong>Unrecoverable Errors</strong>: These are serious issues that prevent the program from continuing, and Rust uses the <code>panic!</code> macro to handle them.</li>
+</ul>
+<h3 id="11-panic-and-unrecoverable-errors"><a class="header" href="#11-panic-and-unrecoverable-errors">1.1 Panic and Unrecoverable Errors</a></h3>
+<p>The <code>panic!</code> macro is used to handle unrecoverable errors by terminating the program. It should be used sparingly, primarily when a situation occurs that the program cannot or should not recover from.</p>
+<h4 id="example-triggering-a-panic"><a class="header" href="#example-triggering-a-panic">Example: Triggering a Panic</a></h4>
+<pre><pre class="playground"><code class="language-rust">fn main() {
+    panic!("Something went wrong!");
+}</code></pre></pre>
+<h3 id="explanation"><a class="header" href="#explanation">Explanation:</a></h3>
+<ul>
+<li>The program will terminate immediately when <code>panic!</code> is called, and an error message will be printed to the console.</li>
+</ul>
+<h3 id="12-backtrace"><a class="header" href="#12-backtrace">1.2 Backtrace</a></h3>
+<p>When a panic occurs, Rust can generate a backtrace that helps you trace the cause of the panic. To enable backtraces, you set the environment variable <code>RUST_BACKTRACE=1</code> before running the program.</p>
+<pre><code class="language-bash">RUST_BACKTRACE=1 cargo run
+</code></pre>
+<h2 id="2-the-result-enum"><a class="header" href="#2-the-result-enum">2. The <code>Result</code> Enum</a></h2>
+<p>For handling recoverable errors, Rust provides the <code>Result</code> enum. <code>Result</code> is a generic enum with two variants:</p>
+<ul>
+<li><code>Ok(T)</code>: Indicates success and contains a value of type <code>T</code>.</li>
+<li><code>Err(E)</code>: Indicates an error and contains a value of type <code>E</code>.</li>
+</ul>
+<h3 id="syntax"><a class="header" href="#syntax">Syntax:</a></h3>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>enum Result&lt;T, E&gt; {
+    Ok(T),
+    Err(E),
+}
+<span class="boring">}</span></code></pre></pre>
+<h3 id="21-using-result-for-error-handling"><a class="header" href="#21-using-result-for-error-handling">2.1 Using <code>Result</code> for Error Handling</a></h3>
+<p>When a function can fail, it returns a <code>Result</code>. The caller of the function can then decide how to handle the success or failure.</p>
+<h4 id="example-opening-a-file"><a class="header" href="#example-opening-a-file">Example: Opening a File</a></h4>
+<pre><pre class="playground"><code class="language-rust">use std::fs::File;
+use std::io::ErrorKind;
+
+fn main() {
+    let file_result = File::open("hello.txt");
+
+    let file = match file_result {
+        Ok(file) =&gt; file,
+        Err(error) =&gt; match error.kind() {
+            ErrorKind::NotFound =&gt; match File::create("hello.txt") {
+                Ok(fc) =&gt; fc,
+                Err(e) =&gt; panic!("Problem creating the file: {:?}", e),
+            },
+            other_error =&gt; panic!("Problem opening the file: {:?}", other_error),
+        },
+    };
+}</code></pre></pre>
+<h3 id="explanation-1"><a class="header" href="#explanation-1">Explanation:</a></h3>
+<ul>
+<li><code>File::open</code> returns a <code>Result&lt;File, io::Error&gt;</code>.</li>
+<li>The <code>match</code> expression is used to handle both <code>Ok</code> and <code>Err</code> variants.</li>
+<li>If the file is not found, the code attempts to create it. If another error occurs, the program panics.</li>
+</ul>
+<h3 id="22-propagating-errors"><a class="header" href="#22-propagating-errors">2.2 Propagating Errors</a></h3>
+<p>Sometimes you want to propagate errors to the calling function instead of handling them immediately. This can be done using the <code>?</code> operator, which simplifies error propagation by returning the error if it occurs.</p>
+<h4 id="example-propagating-errors-with-"><a class="header" href="#example-propagating-errors-with-">Example: Propagating Errors with <code>?</code></a></h4>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>use std::fs::File;
+use std::io::{self, Read};
+
+fn read_username_from_file() -&gt; Result&lt;String, io::Error&gt; {
+    let mut file = File::open("username.txt")?;
+    let mut username = String::new();
+    file.read_to_string(&amp;mut username)?;
+    Ok(username)
+}
+<span class="boring">}</span></code></pre></pre>
+<h3 id="explanation-2"><a class="header" href="#explanation-2">Explanation:</a></h3>
+<ul>
+<li>The <code>?</code> operator is used after <code>File::open</code> and <code>file.read_to_string</code> to propagate errors.</li>
+<li>If an error occurs, it is returned to the calling function immediately, simplifying the code.</li>
+</ul>
+<h2 id="3-the-option-enum"><a class="header" href="#3-the-option-enum">3. The <code>Option</code> Enum</a></h2>
+<p>While not specifically an error handling type, the <code>Option</code> enum is often used in situations where a value may or may not be present. It is a way to handle the absence of a value without resorting to nulls, which can lead to unsafe code.</p>
+<h3 id="syntax-1"><a class="header" href="#syntax-1">Syntax:</a></h3>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>enum Option&lt;T&gt; {
+    Some(T),
+    None,
+}
+<span class="boring">}</span></code></pre></pre>
+<h3 id="31-using-option-for-safe-handling-of-none-values"><a class="header" href="#31-using-option-for-safe-handling-of-none-values">3.1 Using <code>Option</code> for Safe Handling of None Values</a></h3>
+<p>The <code>Option</code> enum can be used when a function might not return a value, such as when looking up an item in a collection.</p>
+<h4 id="example-handling-option"><a class="header" href="#example-handling-option">Example: Handling <code>Option</code></a></h4>
+<pre><pre class="playground"><code class="language-rust">fn main() {
+    let some_number = Some(5);
+    let no_number: Option&lt;i32&gt; = None;
+
+    match some_number {
+        Some(num) =&gt; println!("The number is: {}", num),
+        None =&gt; println!("No number found."),
+    }
+}</code></pre></pre>
+<h3 id="explanation-3"><a class="header" href="#explanation-3">Explanation:</a></h3>
+<ul>
+<li><code>some_number</code> contains a value (<code>Some(5)</code>), while <code>no_number</code> is <code>None</code>.</li>
+<li>The <code>match</code> expression handles both cases safely.</li>
+</ul>
+<h2 id="4-custom-error-types"><a class="header" href="#4-custom-error-types">4. Custom Error Types</a></h2>
+<p>For more complex programs, you may want to define your own error types. This allows you to create meaningful errors that are specific to your application.</p>
+<h3 id="example-defining-a-custom-error-type"><a class="header" href="#example-defining-a-custom-error-type">Example: Defining a Custom Error Type</a></h3>
+<pre><pre class="playground"><code class="language-rust">use std::fmt;
+
+#[derive(Debug)]
+enum CustomError {
+    NotFound,
+    PermissionDenied,
+    Other(String),
+}
+
+impl fmt::Display for CustomError {
+    fn fmt(&amp;self, f: &amp;mut fmt::Formatter) -&gt; fmt::Result {
+        match *self {
+            CustomError::NotFound =&gt; write!(f, "Resource not found"),
+            CustomError::PermissionDenied =&gt; write!(f, "Permission denied"),
+            CustomError::Other(ref err) =&gt; write!(f, "{}", err),
+        }
+    }
+}
+
+fn get_data(id: u32) -&gt; Result&lt;String, CustomError&gt; {
+    if id == 0 {
+        Err(CustomError::NotFound)
+    } else if id == 1 {
+        Err(CustomError::PermissionDenied)
+    } else {
+        Ok(String::from("Data found"))
+    }
+}
+
+fn main() {
+    match get_data(1) {
+        Ok(data) =&gt; println!("Success: {}", data),
+        Err(e) =&gt; println!("Error: {}", e),
+    }
+}</code></pre></pre>
+<h3 id="explanation-4"><a class="header" href="#explanation-4">Explanation:</a></h3>
+<ul>
+<li><code>CustomError</code>: An enum representing different kinds of errors.</li>
+<li>The <code>fmt::Display</code> trait is implemented to customize the error message format.</li>
+<li><code>get_data</code> returns a <code>Result</code> that could either be <code>Ok</code> with a string or an <code>Err</code> with a <code>CustomError</code>.</li>
+</ul>
+<h2 id="5-best-practices-for-error-handling"><a class="header" href="#5-best-practices-for-error-handling">5. Best Practices for Error Handling</a></h2>
+<h3 id="51-prefer-using-result-and-option"><a class="header" href="#51-prefer-using-result-and-option">5.1 Prefer Using <code>Result</code> and <code>Option</code></a></h3>
+<p>Use <code>Result</code> for recoverable errors and <code>Option</code> when a value might be absent. These enums make your code more explicit and safer, reducing the chance of bugs.</p>
+<h3 id="52-use--for-error-propagation"><a class="header" href="#52-use--for-error-propagation">5.2 Use <code>?</code> for Error Propagation</a></h3>
+<p>The <code>?</code> operator is a concise and idiomatic way to propagate errors. It simplifies your code by reducing the need for nested <code>match</code> expressions.</p>
+<h3 id="53-avoid-panic-in-production-code"><a class="header" href="#53-avoid-panic-in-production-code">5.3 Avoid Panic in Production Code</a></h3>
+<p>While <code>panic!</code> is useful for handling unrecoverable errors during development, it should be avoided in production code where possible. Instead, prefer handling errors gracefully using <code>Result</code> and <code>Option</code>.</p>
+<h3 id="54-define-custom-errors-when-needed"><a class="header" href="#54-define-custom-errors-when-needed">5.4 Define Custom Errors When Needed</a></h3>
+<p>For larger applications, define custom error types to better capture the nature of the errors in your domain. This improves code clarity and error handling logic.</p>
+<h2 id="conclusion"><a class="header" href="#conclusion">Conclusion</a></h2>
+<p>Error handling in Rust is designed to be both safe and efficient, ensuring that your programs can handle unexpected situations robustly. By using <code>Result</code> for recoverable errors, <code>Option</code> for optional values, and <code>panic!</code> for unrecoverable errors, you can write code that is both reliable and maintainable. Understanding these concepts and applying best practices will help you build resilient Rust applications that handle errors gracefully and effectively.</p>
+
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
