--- a/15_Collection-Types/index.html
+++ b/15_Collection-Types/index.html
@@ -173,7 +173,232 @@
 
                 <div id="content" class="content">
                     <main>
-                        
+                        <h1 id="understanding-and-using-collection-types-in-rust"><a class="header" href="#understanding-and-using-collection-types-in-rust">Understanding and Using Collection Types in Rust</a></h1>
+<p>Collection types in Rust are powerful tools that allow you to store and manage multiple values efficiently. Rust’s standard library provides several collection types, each designed for different use cases. The most commonly used collections are vectors, strings, hash maps, and sets. This tutorial will guide you through the basics of these collection types, including how to create, manipulate, and use them effectively.</p>
+<h2 id="1-introduction-to-collection-types"><a class="header" href="#1-introduction-to-collection-types">1. Introduction to Collection Types</a></h2>
+<p>Collections in Rust are data structures that can hold multiple values. Unlike arrays and tuples, collections are generally stored on the heap and can grow or shrink in size dynamically. Rust provides several key collection types:</p>
+<ul>
+<li><strong>Vectors (<code>Vec&lt;T&gt;</code>)</strong>: A resizable array.</li>
+<li><strong>Strings (<code>String</code>)</strong>: A growable string type.</li>
+<li><strong>Hash Maps (<code>HashMap&lt;K, V&gt;</code>)</strong>: A key-value store.</li>
+<li><strong>Sets (<code>HashSet&lt;T&gt;</code>)</strong>: A collection of unique values.</li>
+</ul>
+<h3 id="11-ownership-and-borrowing-with-collections"><a class="header" href="#11-ownership-and-borrowing-with-collections">1.1 Ownership and Borrowing with Collections</a></h3>
+<p>When working with collections, it's essential to understand Rust's ownership and borrowing rules. Elements within a collection must adhere to Rust's strict ownership principles, ensuring that memory is managed safely.</p>
+<h2 id="2-vectors-vect"><a class="header" href="#2-vectors-vect">2. Vectors (<code>Vec&lt;T&gt;</code>)</a></h2>
+<p>Vectors are the most commonly used collection type in Rust. They allow you to store a dynamic list of values that can grow and shrink in size.</p>
+<h3 id="21-creating-a-vector"><a class="header" href="#21-creating-a-vector">2.1 Creating a Vector</a></h3>
+<p>You can create a vector using the <code>vec!</code> macro or by explicitly calling <code>Vec::new()</code>.</p>
+<pre><pre class="playground"><code class="language-rust">fn main() {
+    // Creating a vector using vec! macro
+    let mut numbers = vec![1, 2, 3, 4, 5];
+
+    // Creating an empty vector and pushing elements
+    let mut more_numbers: Vec&lt;i32&gt; = Vec::new();
+    more_numbers.push(6);
+    more_numbers.push(7);
+
+    println!("{:?}", numbers);
+    println!("{:?}", more_numbers);
+}</code></pre></pre>
+<h3 id="explanation"><a class="header" href="#explanation">Explanation:</a></h3>
+<ul>
+<li><code>vec![1, 2, 3, 4, 5]</code>: Creates a vector with initial elements.</li>
+<li><code>Vec::new()</code>: Creates an empty vector to which you can add elements using <code>push()</code>.</li>
+</ul>
+<h3 id="22-accessing-and-modifying-elements"><a class="header" href="#22-accessing-and-modifying-elements">2.2 Accessing and Modifying Elements</a></h3>
+<p>You can access elements in a vector using indexing or the <code>get</code> method. Modifying elements requires a mutable reference.</p>
+<pre><pre class="playground"><code class="language-rust">fn main() {
+    let mut numbers = vec![10, 20, 30, 40];
+
+    // Accessing elements
+    let first = numbers[0];
+    println!("First element: {}", first);
+
+    // Accessing elements with get method
+    match numbers.get(2) {
+        Some(third) =&gt; println!("Third element: {}", third),
+        None =&gt; println!("No third element."),
+    }
+
+    // Modifying an element
+    numbers[1] = 25;
+    println!("Modified numbers: {:?}", numbers);
+}</code></pre></pre>
+<h3 id="explanation-1"><a class="header" href="#explanation-1">Explanation:</a></h3>
+<ul>
+<li><code>numbers[0]</code>: Accesses the first element directly.</li>
+<li><code>numbers.get(2)</code>: Safely accesses the third element, returning <code>Option&lt;&amp;T&gt;</code>.</li>
+</ul>
+<h3 id="23-iterating-over-a-vector"><a class="header" href="#23-iterating-over-a-vector">2.3 Iterating Over a Vector</a></h3>
+<p>You can iterate over a vector using a <code>for</code> loop or an iterator.</p>
+<pre><pre class="playground"><code class="language-rust">fn main() {
+    let numbers = vec![1, 2, 3, 4, 5];
+
+    // Iterating with a for loop
+    for number in &amp;numbers {
+        println!("Number: {}", number);
+    }
+
+    // Iterating with an iterator
+    let sum: i32 = numbers.iter().sum();
+    println!("Sum: {}", sum);
+}</code></pre></pre>
+<h3 id="explanation-2"><a class="header" href="#explanation-2">Explanation:</a></h3>
+<ul>
+<li><code>for number in &amp;numbers</code>: Iterates over references to elements in the vector.</li>
+<li><code>numbers.iter()</code>: Creates an iterator to process elements, here used to calculate the sum.</li>
+</ul>
+<h3 id="24-vector-and-memory-management"><a class="header" href="#24-vector-and-memory-management">2.4 Vector and Memory Management</a></h3>
+<p>Vectors automatically handle memory allocation and deallocation, ensuring efficient use of resources. When a vector goes out of scope, its memory is freed.</p>
+<h2 id="3-strings-string"><a class="header" href="#3-strings-string">3. Strings (<code>String</code>)</a></h2>
+<p>Strings in Rust are a complex data type designed to handle UTF-8 encoded text. The <code>String</code> type is a growable, heap-allocated string.</p>
+<h3 id="31-creating-and-manipulating-strings"><a class="header" href="#31-creating-and-manipulating-strings">3.1 Creating and Manipulating Strings</a></h3>
+<p>You can create strings from string literals or by using the <code>String::new()</code> function.</p>
+<pre><pre class="playground"><code class="language-rust">fn main() {
+    let mut s = String::from("Hello");
+
+    // Appending to a string
+    s.push_str(", world!");
+
+    // Replacing part of a string
+    let new_s = s.replace("world", "Rust");
+
+    println!("{}", s);
+    println!("{}", new_s);
+}</code></pre></pre>
+<h3 id="explanation-3"><a class="header" href="#explanation-3">Explanation:</a></h3>
+<ul>
+<li><code>String::from("Hello")</code>: Creates a <code>String</code> from a string literal.</li>
+<li><code>push_str</code>: Appends a string slice to a <code>String</code>.</li>
+<li><code>replace</code>: Replaces part of the string with another substring.</li>
+</ul>
+<h3 id="32-concatenation-and-formatting"><a class="header" href="#32-concatenation-and-formatting">3.2 Concatenation and Formatting</a></h3>
+<p>Strings can be concatenated using the <code>+</code> operator or the <code>format!</code> macro.</p>
+<pre><pre class="playground"><code class="language-rust">fn main() {
+    let s1 = String::from("Hello");
+    let s2 = String::from(", world!");
+
+    // Using the + operator
+    let s3 = s1 + &amp;s2;
+
+    // Using format! macro
+    let s4 = format!("{}{}", s3, " How are you?");
+
+    println!("{}", s4);
+}</code></pre></pre>
+<h3 id="explanation-4"><a class="header" href="#explanation-4">Explanation:</a></h3>
+<ul>
+<li><code>s1 + &amp;s2</code>: Concatenates <code>s1</code> and <code>s2</code>. Note that <code>s1</code> is moved and can no longer be used.</li>
+<li><code>format!</code>: Creates a new <code>String</code> by concatenating multiple strings.</li>
+</ul>
+<h3 id="33-iterating-over-strings"><a class="header" href="#33-iterating-over-strings">3.3 Iterating Over Strings</a></h3>
+<p>Strings in Rust can be iterated over by characters or by bytes.</p>
+<pre><pre class="playground"><code class="language-rust">fn main() {
+    let s = String::from("hello");
+
+    // Iterating over characters
+    for c in s.chars() {
+        println!("{}", c);
+    }
+
+    // Iterating over bytes
+    for b in s.bytes() {
+        println!("{}", b);
+    }
+}</code></pre></pre>
+<h3 id="explanation-5"><a class="header" href="#explanation-5">Explanation:</a></h3>
+<ul>
+<li><code>s.chars()</code>: Iterates over the characters in the string.</li>
+<li><code>s.bytes()</code>: Iterates over the bytes of the string.</li>
+</ul>
+<h2 id="4-hash-maps-hashmapk-v"><a class="header" href="#4-hash-maps-hashmapk-v">4. Hash Maps (<code>HashMap&lt;K, V&gt;</code>)</a></h2>
+<p>Hash maps in Rust store key-value pairs and allow for efficient retrieval of values based on keys. They are similar to dictionaries in Python or maps in C++.</p>
+<h3 id="41-creating-a-hash-map"><a class="header" href="#41-creating-a-hash-map">4.1 Creating a Hash Map</a></h3>
+<p>You can create a hash map using <code>HashMap::new()</code> or by using the <code>collect</code> method on an iterator of tuples.</p>
+<pre><pre class="playground"><code class="language-rust">use std::collections::HashMap;
+
+fn main() {
+    let mut scores = HashMap::new();
+
+    // Inserting key-value pairs
+    scores.insert(String::from("Blue"), 10);
+    scores.insert(String::from("Red"), 50);
+
+    // Creating a hash map from tuples
+    let teams = vec![String::from("Blue"), String::from("Yellow")];
+    let initial_scores = vec![10, 20];
+    let scores: HashMap&lt;_, _&gt; = teams.into_iter().zip(initial_scores.into_iter()).collect();
+
+    println!("{:?}", scores);
+}</code></pre></pre>
+<h3 id="explanation-6"><a class="header" href="#explanation-6">Explanation:</a></h3>
+<ul>
+<li><code>scores.insert</code>: Adds a key-value pair to the hash map.</li>
+<li><code>zip</code>: Combines two iterators into tuples, which are then collected into a hash map.</li>
+</ul>
+<h3 id="42-accessing-and-modifying-values"><a class="header" href="#42-accessing-and-modifying-values">4.2 Accessing and Modifying Values</a></h3>
+<p>You can access values in a hash map using the key, and modify them similarly to vectors.</p>
+<pre><pre class="playground"><code class="language-rust">fn main() {
+    let mut scores = HashMap::new();
+    scores.insert(String::from("Blue"), 10);
+
+    // Accessing a value
+    let score = scores.get(&amp;String::from("Blue"));
+    match score {
+        Some(&amp;s) =&gt; println!("Score: {}", s),
+        None =&gt; println!("No score found."),
+    }
+
+    // Modifying a value
+    scores.insert(String::from("Blue"), 25);
+
+    // Iterating over key-value pairs
+    for (key, value) in &amp;scores {
+        println!("{}: {}", key, value);
+    }
+}</code></pre></pre>
+<h3 id="explanation-7"><a class="header" href="#explanation-7">Explanation:</a></h3>
+<ul>
+<li><code>scores.get</code>: Returns an <code>Option&lt;&amp;V&gt;</code> for the key, which can be handled safely.</li>
+<li><code>scores.insert</code>: Replaces the value associated with a key if it already exists.</li>
+</ul>
+<h3 id="43-hash-map-and-ownership"><a class="header" href="#43-hash-map-and-ownership">4.3 Hash Map and Ownership</a></h3>
+<p>Keys and values are owned by the hash map, meaning that ownership is transferred when inserting into the hash map. This affects how you interact with data before and after insertion.</p>
+<h2 id="5-sets-hashsett"><a class="header" href="#5-sets-hashsett">5. Sets (<code>HashSet&lt;T&gt;</code>)</a></h2>
+<p>A set is a collection of unique values. Rust provides <code>HashSet</code>, which is backed by a hash map for fast membership checking.</p>
+<h3 id="51-creating-and-using-a-hash-set"><a class="header" href="#51-creating-and-using-a-hash-set">5.1 Creating and Using a Hash Set</a></h3>
+<p>You can create a <code>HashSet</code> using <code>HashSet::new()</code> or from an iterator.</p>
+<pre><pre class="playground"><code class="language-rust">use std::collections::HashSet;
+
+fn main() {
+    let mut books = HashSet::new();
+
+    // Adding elements to the set
+    books.insert("The Rust Programming Language");
+    books.insert("Programming Rust");
+    books.insert("Rust by Example");
+
+    // Checking for membership
+    if books.contains("Programming Rust") {
+        println!("We have the book.");
+    }
+
+    // Iterating over the set
+    for book in &amp;books {
+        println!("{}", book);
+    }
+}</code></pre></pre>
+<h3 id="explanation-8"><a class="header" href="#explanation-8">Explanation:</a></h3>
+<ul>
+<li><code>books.insert</code>: Adds a value to the set. Duplicate values are automatically discarded.</li>
+<li><code>books.contains</code>: Checks if a value is in the set.</li>
+</ul>
+<h2 id="6-summary"><a class="header" href="#6-summary">6. Summary</a></h2>
+<p>In</p>
+<p>Rust, collection types such as vectors, strings, hash maps, and sets provide powerful ways to manage and manipulate groups of data. Understanding how to use these collections effectively allows you to write more efficient and flexible Rust programs. By leveraging the strengths of each collection type, you can optimize both performance and memory usage in your applications.</p>
+<p>This tutorial covered the basics of creating, accessing, and manipulating these collections, as well as some advanced features such as iterating and handling ownership. As you continue to work with Rust, mastering these collection types will be a crucial step in becoming proficient in the language.</p>
+
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
